# breakout

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
assets/: breakout.desktop  breakout.rc  icon.icns
include/: Audio.h  Draw.h  Game.h  Icon.h  Physics.h
src/: Audio.cpp  Draw.cpp  Game.cpp  Main.cpp  Physics.cpp
tests/: physics_test.cpp
